--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="s3e-Re-dav">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="s3e-Re-dav">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--Begin Meeting View Controller-->
@@ -81,11 +81,11 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="cancelButton" destination="cew-ja-Z15" id="1Pa-VI-f4W"/>
-                        <outlet property="guestsTableView" destination="2Gk-GQ-omd" id="BSd-Ni-qfK"/>
                         <outlet property="nameGuest" destination="NPD-tT-gwQ" id="eRt-Fa-mhF"/>
                         <outlet property="nameMeeting" destination="eSd-Tv-K5s" id="t3h-Sf-c3A"/>
                         <outlet property="nextButton" destination="Nft-7K-gBD" id="Pp1-qK-a2h"/>
                         <outlet property="search" destination="oet-MG-E15" id="sp4-Y4-OrR"/>
+                        <outlet property="tableView" destination="2Gk-GQ-omd" id="NfS-bg-fcK"/>
                         <segue destination="j4G-PE-T9P" kind="push" identifier="editGuestDetails" id="BOM-rJ-jqT"/>
                     </connections>
                 </viewController>
@@ -152,8 +152,8 @@
                     <connections>
                         <outlet property="emailGuest" destination="Y25-fZ-Uwa" id="fPN-CJ-e5U"/>
                         <outlet property="guestPhoto" destination="ecm-gY-F9O" id="6ds-uZ-o3R"/>
-                        <outlet property="locationGuest" destination="tLg-sY-SO2" id="70W-n2-oTe"/>
                         <outlet property="nameGuest" destination="VO1-SU-fo0" id="JKm-He-0G0"/>
+                        <outlet property="tableView" destination="tLg-sY-SO2" id="82N-qh-TNj"/>
                         <segue destination="Xsy-7b-UdF" kind="push" identifier="guestListCountries" id="HMm-vW-AR0"/>
                     </connections>
                 </viewController>
